# fibonacci-example-non-table

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: fiat_shamir.rs  fold.rs  lib.rs  prepare.rs  quotients.rs
src/bitcoin_script/: composition.rs  fiat_shamir.rs  fold.rs  mod.rs  prepare.rs  quotients.rs
src/split/: mod.rs
