[package]
name = "fibonacci-example-non-table"
version = "1.0.0"
edition = "2021"

[dependencies]
rust-bitcoin-m31 = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-m31/", tag = "1.0.0" }
bitcoin-script = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-script", tag = "1.0.0" }
bitcoin = "0.32.0"
bitcoin-scriptexec = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-scriptexec", tag = "1.0.0", features = ["debug"] }
sha2 = "0.10.8"
rand = "0.8.5"
rand_chacha = "0.3.1"
stwo-prover = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/stwo", tag = "for-fibonacci" }
num-traits = "0.2.0"
lazy_static = "1.4.0"
ctor = "0.2.8"
itertools = "0.13.0"
hex = "0.4.3"
anyhow = "1.0.86"
covenants-gadgets = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/covenants-gadgets", tag = "1.0.0" }
clap = { version = "4.5.0", features = ["derive"] }
colored = "2.1.0"
bitcoin-circle-stark = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/bitcoin-circle-stark", tag = "1.0.0" }

[profile.dev]
opt-level = 3

[profile.release]
lto = true

[features]
profiler = ["bitcoin-scriptexec/profiler"]